--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/bird.cpython-311.pyc
 __pycache__/game.cpython-311.pyc
 __pycache__/pipe.cpython-311.pyc
 .idea/*
+__pycache__/ground.cpython-311.pyc
