--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ __pycache__/game.cpython-311.pyc
 __pycache__/pipe.cpython-311.pyc
 .idea/*
 __pycache__/ground.cpython-311.pyc
+__pycache__/background.cpython-311.pyc
