--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ __pycache__/pipe.cpython-311.pyc
 .idea/*
 __pycache__/ground.cpython-311.pyc
 __pycache__/background.cpython-311.pyc
+__pycache__/background.cpython-311.pyc
+__pycache__/ground.cpython-311.pyc
