added stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-__pycache__/bird.cpython-311.pyc
-__pycache__/game.cpython-311.pyc
-__pycache__/pipe.cpython-311.pyc
 .idea/*
-__pycache__/ground.cpython-311.pyc
-__pycache__/background.cpython-311.pyc
+.__pycache__/*
